examples/test/testpolicy8966.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8966
  namespace: namespace10
spec:
  podSelector:
    matchLabels:
      key8: value2
      key2: value35
      key5: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value14
      podSelector:
        matchLabels:
          key22: value15
